--- a/css/styles.css
+++ b/css/styles.css
@@ -641,7 +641,7 @@ footer {
 }
 
 footer .conteiner {
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: baseline;
 }
 
@@ -694,7 +694,6 @@ address a:focus {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  margin-left: 70px;
 }
 
 .join-us-title {
@@ -738,7 +737,6 @@ address a:focus {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  margin-left: 70px;
 }
 
 .subscribe-form {
@@ -771,6 +769,7 @@ address a:focus {
 .subscribe input:focus-visible {
   border-color: rgba(255, 255, 255, 0.3);
   outline: none;
+  border-color: var(--white-color);
 }
 
 .subscribe button {
